atualizei font-size do .experiencia .subtitulo na tela <525px

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -107,6 +107,11 @@
     max-width: initial;
   }
 }
+@media (max-width: 525px) {
+  .subtitulo-formacao {
+    font-size: 2.3rem;
+  }
+}
 @media (max-width: 500px) {
   .ano-curso {
     display: none;
