atualizei css de subtitulo-formacao

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -108,7 +108,7 @@
   }
 }
 @media (max-width: 525px) {
-  .subtitulo-formacao {
+  .formacao-area .subtitulo-formacao {
     font-size: 2.3rem;
   }
 }
